Add Kori Translate

--- a/Sparc2/Sparc2/Html.razor
+++ b/Sparc2/Sparc2/Html.razor
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google" content="notranslate" />
     <base href="/" />
     <link rel="stylesheet" href="@Assets["css/app.css"]" />
     <link rel="stylesheet" href="@Assets["Sparc2.styles.css"]" />
@@ -36,5 +37,6 @@
         });
 
     </script>
+    <script type="module" src="https://localhost:7185/kori-translate.js"></script>
 </body>
 </html>
