--- a/Sparc2/Sparc2/Profile/UserProfile.razor.scss
+++ b/Sparc2/Sparc2/Profile/UserProfile.razor.scss
@@ -103,44 +103,16 @@
     background: linear-gradient(135deg, #f093fb, #f5576c);
 }
 
-/*.modal {
-    width: 332px;
-    padding: 24px;
-    border-radius: 16px;
-    background: var(--yellow-50);
-    animation: fadeIn 1s ease-in-out;
-
-    header {
-        margin-bottom: 16px;
-
-        h3 {
-            color: var(--gray-900);
-            font-size: 1.6rem;
-            font-weight: 600;
-            line-height: 120%;
-            letter-spacing: -0.16px;
-        }
-    }
-
-    div {
-        width: 100%;
-
-        ::deep input {
-            border-radius: 16px;
-            border: 1px solid var(--gray-100);
-            background: var(--yellow-50);
-            padding: 8px 16px;
-            height: 22px;
-            width: -webkit-fill-available;
-        }
-    }
-
-    footer {
-        display: flex;
-        justify-content: space-between;
-        margin-top: 16px;
-    }
-}*/
+kori-langselect ::deep select {
+    appearance: none;
+    background-color: #f9f9f9;
+    color: #333;
+    padding: 10px 14px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    font-size: 16px;
+    font-family: sans-serif;
+}
 
 .user-profile-container:hover .profile-picture-wrapper {
     background: linear-gradient(135deg, #f093fb, #f5576c);
