--- a/Sparc2/Sparc2/Shared/CatalogLayout.razor.scss
+++ b/Sparc2/Sparc2/Shared/CatalogLayout.razor.scss
@@ -18,6 +18,16 @@ main {
     }
 }
 
+@media only screen and (max-width: 500px) {
+    main {
+        .grid {
+            margin: 0 32px;
+            grid-template-columns: repeat(12, 1fr);
+            column-gap: 16px;
+        }
+    }
+}
+
 @keyframes fadeIn {
     0% {
         opacity: 0;
