--- a/Sparc2/Sparc2/Shared/NavMenu.razor.css
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor.css
@@ -21,7 +21,17 @@ nav .container {
   align-items: center;
   gap: 32px;
 }
-nav .right {
+nav .right .menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  align-items: center;
+  gap: 32px;
+}
+nav .right .menu h5 {
+  display: none;
+}
+nav .right .menu-pages {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -57,7 +67,7 @@ nav .right .account-btn span:active {
   color: var(--purple-800);
 }
 
-button {
+button, .button, a {
   background: transparent;
   border: 1px solid transparent;
   border-radius: 20px;
@@ -69,18 +79,19 @@ button {
   cursor: pointer;
   transition: 0.2s all ease-in-out;
 }
-button ::deep svg path {
+button ::deep svg path, .button ::deep svg path, a ::deep svg path {
   stroke: #FFFCF6;
 }
-button.secondary-btn {
+button.secondary-btn, .button.secondary-btn, a.secondary-btn {
+  padding: 0 !important;
   padding: 0 !important;
   border: 1px solid transparent;
 }
-button.secondary-btn:hover {
+button.secondary-btn:hover, .button.secondary-btn:hover, a.secondary-btn:hover {
   color: var(--purple-500);
   text-decoration: underline;
 }
-button.secondary-btn:active {
+button.secondary-btn:active, .button.secondary-btn:active, a.secondary-btn:active {
   color: var(--purple-800);
 }
 
@@ -94,16 +105,16 @@ button.secondary-btn:active {
   backdrop-filter: blur(100px);
   -webkit-backdrop-filter: blur(100px);
 }
-.other-nav .left button {
+.other-nav .left button, .other-nav .left .button, .other-nav .left a {
   display: flex;
   align-items: center;
   padding: 8px 16px 8px 14px;
 }
-.other-nav .left button > svg {
+.other-nav .left button > svg, .other-nav .left .button > svg, .other-nav .left a > svg {
   width: 14px;
   height: 14px;
 }
-.other-nav .left button > svg path {
+.other-nav .left button > svg path, .other-nav .left .button > svg path, .other-nav .left a > svg path {
   stroke: var(--white);
 }
 .other-nav .center {
@@ -131,7 +142,7 @@ button.secondary-btn:active {
   color: var(--gray-200);
   opacity: 0.6;
 }
-.other-nav button {
+.other-nav button, .other-nav .button, .other-nav a {
   height: 32px;
   display: flex;
   flex-direction: row;
@@ -139,13 +150,13 @@ button.secondary-btn:active {
   gap: 4px;
   color: var(--yellow-50);
 }
-.other-nav button ::deep svg {
+.other-nav button ::deep svg, .other-nav .button ::deep svg, .other-nav a ::deep svg {
   margin-top: 1px;
 }
-.other-nav button:hover {
+.other-nav button:hover, .other-nav .button:hover, .other-nav a:hover {
   border: 1px solid var(--yellow-50);
 }
-.other-nav button:active {
+.other-nav button:active, .other-nav .button:active, .other-nav a:active {
   background: rgba(255, 252, 246, 0.1);
 }
 .other-nav .right {
@@ -233,7 +244,71 @@ button.secondary-btn:active {
 }
 @media (min-width: 375px) and (max-width: 766px) {
   .home-nav {
-    width: calc(100vw - 32px);
+    width: calc(100vw - 64px);
     padding: 42px 16px 16px 16px;
+  }
+  .home-nav .right {
+    display: none;
+    background: var(--yellow-50);
+  }
+  .home-nav .right.mobile-menu.show {
+    display: block;
+    position: fixed;
+    top: 80px;
+    left: 0;
+    width: 100vw;
+    height: calc(100vh - 80px);
+  }
+  .home-nav .right .menu {
+    height: calc(100% - 64px);
+    padding: 32px;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    gap: 48px;
+  }
+  .home-nav .right .menu > * {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 32px;
+  }
+  .home-nav .right .menu hr {
+    width: 100%;
+    height: 1px;
+    background: var(--yellow-200);
+    border: none;
+  }
+  .home-nav .right .menu h5 {
+    display: block;
+    padding: 8px;
+    color: var(--purple-500);
+    font-family: "elza-text";
+    font-size: 1.4rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 140%; /* 19.6px */
+    letter-spacing: -0.14px;
+    text-transform: uppercase;
+  }
+  .home-nav .right .menu button, .home-nav .right .menu .button, .home-nav .right .menu a {
+    padding: 8px 16px !important;
+    text-align: left;
+  }
+  .home-nav .right .menu-pages a {
+    font-size: 2.133rem;
+    color: var(--purple-800);
+    text-decoration: none;
+    letter-spacing: -0.14px;
+  }
+  .home-nav .right .menu-pages a:hover {
+    color: var(--purple-500);
+    text-decoration: underline;
+  }
+  .home-nav .right .menu-pages a:active {
+    color: var(--purple-800);
+  }
+  .home-nav .right .menu-profile .account-btn {
+    margin-left: 16px;
   }
 }
