--- a/Sparc2/Sparc2/Shared/NavMenu.razor.scss
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor.scss
@@ -25,11 +25,25 @@
     }
 
     .right {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        gap: 32px;
+        .menu {
+            display: flex;
+            flex-direction: row;
+            justify-content: end;
+            align-items: center;
+            gap: 32px;
+
+            h5 {
+                display: none;
+            }
+
+            &-pages {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+                gap: 32px;
+            }
+        }
 
         .account-btn {
             display: flex;
@@ -67,7 +81,7 @@
     }
 }
 
-button {
+button, .button, a {
     background: transparent;
     border: 1px solid transparent;
     border-radius: 20px;
@@ -84,6 +98,7 @@ button {
     }
 
     &.secondary-btn {
+        padding: 0 !important;
         padding: 0 !important;
         border: 1px solid transparent;
 
@@ -109,7 +124,7 @@ button {
     -webkit-backdrop-filter: blur(100px);
 
     .left {
-        button {
+        button, .button, a {
             display: flex;
             align-items: center;
             padding: 8px 16px 8px 14px;
@@ -154,7 +169,7 @@ button {
         }
     }
 
-    button {
+    button, .button, a {
         height: 32px;
         display: flex;
         flex-direction: row;
@@ -277,7 +292,88 @@ button {
 
 @media (min-width: 375px) and (max-width: 766px) {
     .home-nav {
-        width: calc(100vw - 32px);
+        width: calc(100vw - 64px);
         padding: 42px 16px 16px 16px;
+
+        .right {
+            display: none;
+            background: var(--yellow-50);
+
+            &.mobile-menu {
+                &.show {
+                    display: block;
+                    position: fixed;
+                    top: 80px;
+                    left: 0;
+                    width: 100vw;
+                    height: calc(100vh - 80px);
+                }
+            }
+
+            .menu {
+                height: calc(100% - 64px);
+                padding: 32px;
+                flex-direction: column;
+                justify-content: start;
+                align-items: start;
+                gap: 48px;
+
+                > * {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-start;
+                    gap: 32px;
+                }
+
+                hr {
+                    width: 100%;
+                    height: 1px;
+                    background: var(--yellow-200);
+                    border: none;
+                }
+
+                h5 {
+                    display: block;
+                    padding: 8px;
+                    color: var(--purple-500);
+                    font-family: "elza-text";
+                    font-size: 1.4rem;
+                    font-style: normal;
+                    font-weight: 500;
+                    line-height: 140%; /* 19.6px */
+                    letter-spacing: -0.14px;
+                    text-transform: uppercase;
+                }
+
+                button, .button, a {
+                    padding: 8px 16px !important;
+                    text-align: left;
+                }
+
+                &-pages {
+                    a {
+                        font-size: 2.133rem;
+                        color: var(--purple-800);
+                        text-decoration: none;
+                        letter-spacing: -0.14px;
+
+                        &:hover {
+                            color: var(--purple-500);
+                            text-decoration: underline;
+                        }
+
+                        &:active {
+                            color: var(--purple-800);
+                        }
+                    }
+                }
+
+                &-profile {
+                    .account-btn {
+                        margin-left: 16px;
+                    }
+                }
+            }
+        }
     }
 }
