--- a/Sparc2/Sparc2/Shared/NavMenu.razor.scss
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor.scss
@@ -296,21 +296,25 @@ button, .button, a {
         padding: 42px 16px 16px 16px;
 
         .right {
-            display: none;
             background: var(--yellow-50);
+            display: block;
+            position: fixed;
+            top: 80px;
+            right: 0;
+            width: 100vw;
+            height: calc(100vh - 80px);
+            transform: translateX(100vw);
+            transition: transform 1.5s ease-in;
 
             &.mobile-menu {
                 &.show {
-                    display: block;
-                    position: fixed;
-                    top: 80px;
-                    left: 0;
-                    width: 100vw;
-                    height: calc(100vh - 80px);
+                    transform: translateX(0);
+                    transition: transform 1.5s ease-out;
                 }
             }
 
             .menu {
+                background: var(--yellow-50);
                 height: calc(100% - 64px);
                 padding: 32px;
                 flex-direction: column;
