mobile catalog layout

--- a/Sparc2/Sparc2/Catalog/Catalog.razor
+++ b/Sparc2/Sparc2/Catalog/Catalog.razor
@@ -8,7 +8,7 @@
             {
                 <div id="@app.Id" class="product product-card" data-id="@app.Id">
                     <div class="product card-overlay" data-id="@app.Id"></div>
-                    <div class="product title" data-id="@app.Id">@app.Title</div>
+                    <div class="product title" data-id="@app.Id"><h4>@app.Title</h4></div>
                 </div>
             }
         </div>
