--- a/Sparc2/Sparc2/Catalog/ProductInfo.razor.css
+++ b/Sparc2/Sparc2/Catalog/ProductInfo.razor.css
@@ -3,8 +3,10 @@
   flex-direction: column;
   gap: 32px;
   width: calc(100% - 32px);
-  padding-bottom: 150px;
   position: relative;
+}
+.product-info.product-page {
+  padding-bottom: 150px;
 }
 .product-info header {
   display: flex;
@@ -18,7 +20,7 @@
   align-items: center;
   gap: 32px;
 }
-.product-info header h3 {
+.product-info header h2 {
   font-size: 5.052rem;
   font-style: normal;
   font-weight: 700;
@@ -28,7 +30,7 @@
 .product-info header .price {
   width: fit-content;
   font-family: "elza-text", sans-serif;
-  font-size: 21.33px;
+  font-size: 2.133rem;
   font-style: normal;
   font-weight: 700;
   line-height: 110%; /* 23.463px */
@@ -69,7 +71,7 @@
 }
 .product-info .description p {
   font-family: "elza-text", sans-serif;
-  font-size: 16px;
+  font-size: 1.6rem;
   font-style: normal;
   font-weight: 400;
   line-height: 140%; /* 22.4px */
@@ -78,17 +80,16 @@
 .product-info footer .credits {
   display: flex;
   flex-direction: column;
-  gap: 16px;
 }
-.product-info footer .credits h4, .product-info footer .credits p, .product-info footer .credits span, .product-info footer .credits button {
+.product-info footer .credits h3, .product-info footer .credits p, .product-info footer .credits span, .product-info footer .credits button {
   font-family: "Fjalla One";
-  font-size: 16px;
+  font-size: 1.6rem;
   font-style: normal;
   font-weight: 400;
   line-height: 140%; /* 22.4px */
   color: var(--purple-800);
 }
-.product-info footer .credits h4 {
+.product-info footer .credits h3 {
   display: flex;
   flex-direction: row;
   justify-content: start;
@@ -123,14 +124,39 @@
   height: 0;
   opacity: 0;
 }
+.product-info footer .credits div:last-child > * {
+  height: 0;
+}
 .product-info footer .credits div:last-child.rotate {
+  margin-top: 16px;
   height: fit-content;
   opacity: 1;
   animation: fadeIn 1.5s ease-in;
 }
+.product-info footer .credits div:last-child.rotate > * {
+  height: fit-content;
+}
 .product-info footer .credits div:last-child.rotateBack {
+  margin: 0;
   opacity: 0;
-  animation: fadeOut 1.5s ease-in;
+}
+.product-info footer .credits div:last-child.rotateBack > * {
+  height: 0;
+}
+@media only screen and (max-width: 766px) {
+  .product-info {
+    width: calc(100% - 64px);
+    padding: 32px;
+  }
+  .product-info header h2 {
+    font-size: 2.848rem;
+  }
+  .product-info header .price {
+    font-size: 1.6rem;
+  }
+  .product-info .description p {
+    font-size: 1.4rem;
+  }
 }
 
 @keyframes fadeIn {
