--- a/Sparc2/Sparc2/Catalog/ProductInfo.razor.scss
+++ b/Sparc2/Sparc2/Catalog/ProductInfo.razor.scss
@@ -3,8 +3,11 @@
     flex-direction: column;
     gap: 32px;
     width: calc(100% - 32px);
-    padding-bottom: 150px;
     position: relative;
+
+    &.product-page {
+        padding-bottom: 150px;
+    }
 
     header {
         display: flex;
@@ -19,7 +22,7 @@
             gap: 32px;
         }
 
-        h3 {
+        h2 {
             font-size: 5.052rem;
             font-style: normal;
             font-weight: 700;
@@ -30,7 +33,7 @@
         .price {
             width: fit-content;
             font-family: "elza-text", sans-serif;
-            font-size: 21.33px;
+            font-size: 2.133rem;
             font-style: normal;
             font-weight: 700;
             line-height: 110%; /* 23.463px */
@@ -81,7 +84,7 @@
     .description {
         p {
             font-family: "elza-text", sans-serif;
-            font-size: 16px;
+            font-size: 1.6rem;
             font-style: normal;
             font-weight: 400;
             line-height: 140%; /* 22.4px */
@@ -93,18 +96,17 @@
         .credits {
             display: flex;
             flex-direction: column;
-            gap: 16px;
 
-            h4, p, span, button {
+            h3, p, span, button {
                 font-family: "Fjalla One";
-                font-size: 16px;
+                font-size: 1.6rem;
                 font-style: normal;
                 font-weight: 400;
                 line-height: 140%; /* 22.4px */
                 color: var(--purple-800);
             }
 
-            h4 {
+            h3 {
                 display: flex;
                 flex-direction: row;
                 justify-content: start;
@@ -149,18 +151,56 @@
                 height: 0;
                 opacity: 0;
 
+                > * {
+                    height: 0;
+                }
+
                 &.rotate {
                     //max-height: 300px;
                     //transition: max-height 2s ease-in-out;
+                    margin-top: 16px;
                     height: fit-content;
                     opacity: 1;
                     animation: fadeIn 1.5s ease-in;
+
+                    > * {
+                        height: fit-content;
+                    }
                 }
 
                 &.rotateBack {
+                    margin: 0;
                     opacity: 0;
-                    animation: fadeOut 1.5s ease-in;
+                    //animation: fadeOut 1.5s ease-in;
+
+                    > * {
+                        height: 0;
+                    }
                 }
+            }
+        }
+    }
+
+    @media only screen and (max-width: 766px) {
+        width: calc(100% - 64px);
+        padding: 32px;
+
+        &.catalog-page {
+        }
+
+        header {
+            h2 {
+                font-size: 2.848rem;
+            }
+
+            .price {
+                font-size: 1.6rem;
+            }
+        }
+
+        .description {
+            p {
+                font-size: 1.4rem;
             }
         }
     }
