--- a/Sparc2/Sparc2/Shared/NavMenu.razor.scss
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor.scss
@@ -14,6 +14,10 @@
         margin: 0;
         padding: 16px 32px;
         background: var(--yellow-50);
+
+        .menu-toggle {
+            display: none;
+        }
     }
 
     .container {
@@ -290,91 +294,119 @@ button, .button, a {
     }
 }
 
-@media (min-width: 375px) and (max-width: 766px) {
-    .home-nav {
-        width: calc(100vw - 64px);
-        padding: 42px 16px 16px 16px;
-
-        .right {
-            background: var(--yellow-50);
-            display: block;
+@media only screen and (max-width: 766px) {
+    nav {
+        &.home-nav {
+            height: 32px;
+            width: calc(100vw - 64px);
+            margin: 0;
+            padding: 16px 32px;
             position: fixed;
-            top: 80px;
-            right: 0;
-            width: 100vw;
-            height: calc(100vh - 80px);
-            transform: translateX(100vw);
-            transition: transform 1.5s ease-in;
+            top: 0;
+            left: 0;
 
-            &.mobile-menu {
-                &.show {
-                    transform: translateX(0);
-                    transition: transform 1.5s ease-in-out;
+            .left {
+                ::deep svg {
+                    height: 22px;
+                    width: auto;
                 }
             }
 
-            .menu {
+            .menu-toggle {
+                display: block;
+                button {
+                    height: 32px;
+                    width: fit-content;
+                    padding: 0;
+
+                    ::deep svg {
+                        height: 32px;
+                        width: auto;
+                    }
+                }
+            }
+
+            .right {
                 background: var(--yellow-50);
-                height: calc(100% - 64px);
-                padding: 32px;
-                flex-direction: column;
-                justify-content: start;
-                align-items: start;
-                gap: 48px;
+                display: block;
+                position: fixed;
+                top: 80px;
+                right: 0;
+                width: 100vw;
+                height: calc(100vh - 80px);
+                transform: translateX(100vw);
+                transition: transform 1.5s ease-in;
 
-                > * {
-                    display: flex;
-                    flex-direction: column;
-                    align-items: flex-start;
-                    gap: 32px;
-                }
-
-                hr {
-                    width: 100%;
-                    height: 1px;
-                    background: var(--yellow-200);
-                    border: none;
-                }
-
-                h5 {
-                    display: block;
-                    padding: 8px;
-                    color: var(--purple-500);
-                    font-family: "elza-text";
-                    font-size: 1.4rem;
-                    font-style: normal;
-                    font-weight: 500;
-                    line-height: 140%; /* 19.6px */
-                    letter-spacing: -0.14px;
-                    text-transform: uppercase;
-                }
-
-                button, .button, a {
-                    padding: 8px 16px !important;
-                    text-align: left;
-                }
-
-                &-pages {
-                    a {
-                        font-size: 2.133rem;
-                        color: var(--purple-800);
-                        text-decoration: none;
-                        letter-spacing: -0.14px;
-
-                        &:hover {
-                            color: var(--purple-500);
-                            text-decoration: underline;
-                        }
-
-                        &:active {
-                            color: var(--purple-800);
-                        }
+                &.mobile-menu {
+                    &.show {
+                        transform: translateX(0);
+                        transition: transform 1.5s ease-in-out;
                     }
                 }
 
-                &-profile {
-                    .account-btn {
-                        margin-left: 16px;
+                .menu {
+                    background: var(--yellow-50);
+                    height: calc(100% - 64px);
+                    padding: 32px;
+                    flex-direction: column;
+                    justify-content: start;
+                    align-items: start;
+                    gap: 48px;
+
+                    > * {
+                        display: flex;
+                        flex-direction: column;
+                        align-items: flex-start;
+                        gap: 32px;
+                    }
+
+                    hr {
+                        width: 100%;
+                        height: 1px;
+                        background: var(--yellow-200);
+                        border: none;
+                    }
+
+                    h5 {
+                        display: block;
+                        padding: 8px;
+                        color: var(--purple-500);
+                        font-family: "elza-text";
+                        font-size: 1.4rem;
+                        font-style: normal;
+                        font-weight: 500;
+                        line-height: 140%; /* 19.6px */
+                        letter-spacing: -0.14px;
+                        text-transform: uppercase;
+                    }
+
+                    button, .button, a {
+                        padding: 8px 16px !important;
+                        text-align: left;
+                    }
+
+                    &-pages {
+                        a {
+                            font-size: 2.133rem;
+                            color: var(--purple-800);
+                            text-decoration: none;
+                            letter-spacing: -0.14px;
+
+                            &:hover {
+                                color: var(--purple-500);
+                                text-decoration: underline;
+                            }
+
+                            &:active {
+                                color: var(--purple-800);
+                            }
+                        }
+                    }
+
+                    &-profile {
+                        .account-btn {
+                            margin-left: 16px;
+                        }
                     }
                 }
             }
