--- a/Sparc2/Sparc2/Pages/TovikReferral.razor.scss
+++ b/Sparc2/Sparc2/Pages/TovikReferral.razor.scss
@@ -202,7 +202,7 @@
         }
     }
 
-    .kori-updates {
+    .tovik-updates {
         position: relative;
         z-index: 1;
         display: flex;
@@ -378,7 +378,7 @@
             }
         }
 
-        .kori-updates {
+        .tovik-updates {
             padding: 100px 0;
         }
 
@@ -478,7 +478,7 @@
             }
         }
 
-        .kori-updates {
+        .tovik-updates {
             padding: 50px 0;
 
             div {
@@ -608,7 +608,7 @@
             }
         }
 
-        .kori-updates {
+        .tovik-updates {
             padding: 50px 0;
 
             div {
