--- a/Sparc2/Sparc2/Pages/TovikReferral.razor
+++ b/Sparc2/Sparc2/Pages/TovikReferral.razor
@@ -5,9 +5,9 @@
 @using System.Text.Json
 @using Microsoft.AspNetCore.Components.Forms
 
-@page "/kori"
+@page "/tovik"
 
-<PageTitle>Kori</PageTitle>
+<PageTitle>Tovik</PageTitle>
 
 <section>
     <div class="line"></div>
@@ -15,20 +15,20 @@
     <Breadcrumbs Items="@BreadcrumbItems" />
 
     <header>
-        <h1>Kori Beta Referral Program at Sparc</h1>
+        <h1>Tovik Beta Referral Program at Sparc</h1>
     </header>
 
     <section class="landing">
         <div class="landing-text">
             <h2>
-                Refer friends to Kori
+                Refer friends to Tovik
                 <br />
                 Get rewards in return
             </h2>
 
             <section>
-                <h3>Support Kori</h3>
-                <p>Help Kori enhance content management experiences.</p>
+                <h3>Support Tovik</h3>
+                <p>Help Tovik enhance content management experiences.</p>
             </section>
 
             <section>
@@ -50,9 +50,9 @@
         {
 
         }
-        else if (HasKoriAccess)
+        else if (HasTovikAccess)
         {
-            <h4>You already have access! Click <a href="" target="_blank">here</a> to go to Kori Beta app!</h4>
+            <h4>You already have access! Click <a href="" target="_blank">here</a> to go to Tovik Beta app!</h4>
         }
         else
         {
@@ -77,7 +77,7 @@
             <article>
                 <CloudElement />
                 <div>
-                    <h5>1) Refer Kori to your friends</h5>
+                    <h5>1) Refer Tovik to your friends</h5>
                     <p>Share your unique code with friends, marketing agencies, and social media pros!</p>
                 </div>
             </article>
@@ -85,8 +85,8 @@
             <article>
                 <BlogElement />
                 <div>
-                    <h5>2) Software Insights & Kori Demo</h5>
-                    <p>Discuss your tools currently used with your organization. Learn about the features and benefits of the Kori software demo.</p>
+                    <h5>2) Software Insights & Tovik Demo</h5>
+                    <p>Discuss your tools currently used with your organization. Learn about the features and benefits of the Tovik software demo.</p>
                 </div>
             </article>
 
@@ -102,16 +102,16 @@
                 <CurveLineElement />
                 <div>
                     <h5>4) Feedback Usage</h5>
-                    <p>Utilize feedback from beta testers to enhance Kori product features.</p>
+                    <p>Utilize feedback from beta testers to enhance Tovik product features.</p>
                 </div>
             </article>
         </div>
     </section>
 
-    <section class="kori-updates">
+    <section class="tovik-updates">
         <div>
-            <h3>Kori Beta Referral Program</h3>
-            <p>The Kori Beta Program provides an easy way to explore pre-release versions of Kori and test our new features. Your feedback will assist us in pinpointing and resolving issues to further enhance the platform. Devices enrolled in the program will automatically receive updates for the latest beta version of Kori through the Sparc community.</p>
+            <h3>Tovik Beta Referral Program</h3>
+            <p>The Tovik Beta Program provides an easy way to explore pre-release versions of Tovik and test our new features. Your feedback will assist us in pinpointing and resolving issues to further enhance the platform. Devices enrolled in the program will automatically receive updates for the latest beta version of Tovik through the Sparc community.</p>
         </div>
 
         <div>
@@ -123,12 +123,12 @@
 
     <section class="faq">
         <h3>Beta Referral Program FAQs</h3>
-        <p>Find the most frequently asked questions and answers for Kori Beta Program</p>
+        <p>Find the most frequently asked questions and answers for Tovik Beta Program</p>
 
         <FaqItem Title="How often will I receive beta updates">
             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Sit amed consectur adipiscing elit quisque faucibus ex. Adipiscing elit quisque faucibus ex sapien vitae pellentesque.</p>
         </FaqItem>
-        <FaqItem Title="What does Kori do?">
+        <FaqItem Title="What does Tovik do?">
             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Sit amed consectur adipiscing elit quisque faucibus ex. Adipiscing elit quisque faucibus ex sapien vitae pellentesque.</p>
         </FaqItem>
         <FaqItem Title="How long does the beta program last?">
@@ -140,10 +140,10 @@
         <FaqItem Title="What happens to my feedback and suggestions?">
             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Sit amed consectur adipiscing elit quisque faucibus ex. Adipiscing elit quisque faucibus ex sapien vitae pellentesque.</p>
         </FaqItem>
-        <FaqItem Title="How do I verify that I'm running a beta version of Kori?">
+        <FaqItem Title="How do I verify that I'm running a beta version of Tovik?">
             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Sit amed consectur adipiscing elit quisque faucibus ex. Adipiscing elit quisque faucibus ex sapien vitae pellentesque.</p>
         </FaqItem>
-        <FaqItem Title="How can I  opt out and return to a public Kori release?">
+        <FaqItem Title="How can I  opt out and return to a public Tovik release?">
             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Sit amed consectur adipiscing elit quisque faucibus ex. Adipiscing elit quisque faucibus ex sapien vitae pellentesque.</p>
         </FaqItem>
         <FaqItem Title="How do I report bugs or give feedbacks?">
@@ -158,7 +158,7 @@
     </section>
 
     <footer class="terms">
-        Please see the <a href="" target="_blank">Kori Beta Program at Sparc Terms</a> for more information.
+        Please see the <a href="" target="_blank">Tovik Beta Program at Sparc Terms</a> for more information.
     </footer>
 </section>
 
@@ -213,12 +213,12 @@
     private string VerificationError = "";
     private bool ShowVerificationModal = false;
 
-    private bool HasKoriAccess => CurrentUser?.Products?.Any(p => p.ProductId == "Kori") == true;
+    private bool HasTovikAccess => CurrentUser?.Products?.Any(p => p.ProductId == "Tovik") == true;
 
     private readonly List<(string, string)> BreadcrumbItems = new()
     {
         ("Sparc", "/"),
-        ("Kori Beta Referral Program", "/kori")
+        ("Tovik Beta Referral Program", "/tovik")
     };
 
     protected override async Task OnInitializedAsync() => await GetUserInfo();
@@ -236,15 +236,15 @@
         }
     }
 
-    private async Task AddKoriProduct()
+    private async Task AddTovikProduct()
     {
-        await SparcEngine.AddUserProduct(new AddProductRequest("Kori"));
+        await SparcEngine.AddUserProduct(new AddProductRequest("Tovik"));
         await GetUserInfo();
     }
 
     private async Task TryAuthAndJoinBeta()
     {
-        if (IsAddingProduct || HasKoriAccess)
+        if (IsAddingProduct || HasTovikAccess)
             return;
 
         IsAddingProduct = true;
@@ -353,8 +353,8 @@
 
             if (success)
             {
-                // 6. Add Kori product
-                await AddKoriProduct();
+                // 6. Add Tovik product
+                await AddTovikProduct();
             }
             else
             {
