--- a/Sparc2/Sparc2/Shared/Components/LanguageSelector.razor.scss
+++ b/Sparc2/Sparc2/Shared/Components/LanguageSelector.razor.scss
@@ -18,8 +18,8 @@
 
 /*Fernando's code:*/
 
-/*.kori-login__language {
-    .kori-login__language-btn {
+/*.tovik-login__language {
+    .tovik-login__language-btn {
         width: 100%;
         display: flex !important;
         justify-content: space-between !important;
@@ -35,7 +35,7 @@
         color: white !important;
         cursor: pointer;
 
-        @extend .kori-login__text-btn;
+        @extend .tovik-login__text-btn;
 
         &-content {
             display: flex !important;
@@ -49,7 +49,7 @@
             opacity: 0.7 !important;
         }
 
-        .kori-login__expand-icon {
+        .tovik-login__expand-icon {
             width: 16px;
             height: 16px;
             transition: transform 1000ms ease-in-out;
@@ -61,7 +61,7 @@
         }
     }
 
-    .kori-login__language-list {
+    .tovik-login__language-list {
         display: flex;
         flex-direction: column;
         gap: 8px;
@@ -90,7 +90,7 @@
             border: none !important;
             border-radius: 0 !important;
             text-align: left !important;
-            @extend .kori-login__text-btn;
+            @extend .tovik-login__text-btn;
 
             aside {
                 font-family: 'Encode Sans Expanded' !important;
@@ -102,10 +102,10 @@
         }
     }
 
-    .kori-login__language-mobile {
+    .tovik-login__language-mobile {
         display: none;
 
-        .kori-login__language-selected {
+        .tovik-login__language-selected {
             width: 100%;
             padding: 16px;
             margin-bottom: 32px;
@@ -114,14 +114,14 @@
             border: 1px solid var(--Gray-100, #E5E5E5);
             border-radius: 8px;
             color: white;
-            @extend .kori-login__text-primary;
+            @extend .tovik-login__text-primary;
         }
 
         aside {
-            @extend .kori-login__text-secondary;
+            @extend .tovik-login__text-secondary;
         }
 
-        .kori-login__language-list {
+        .tovik-login__language-list {
             height: 100%;
             max-height: none;
             display: flex;
@@ -158,14 +158,14 @@
     }
 
     @media only screen and (max-width: 1024px) {
-        .kori-login__language-desktop {
+        .tovik-login__language-desktop {
             display: none;
         }
 
-        .kori-login__language-mobile {
+        .tovik-login__language-mobile {
             display: block;
 
-            .kori-login__language-selected {
+            .tovik-login__language-selected {
                 display: flex;
             }
         }
@@ -174,7 +174,7 @@
 
 // buttons
 
-.kori-login__text-primary {
+.tovik-login__text-primary {
     font-family: 'Encode Sans Semi Expanded' !important;
     font-size: 16px !important;
     font-weight: 400 !important;
@@ -182,7 +182,7 @@
     color: var(--grey-50) !important;
 }
 
-.kori-login__text-secondary {
+.tovik-login__text-secondary {
     font-family: 'Encode Sans Expanded' !important;
     font-size: 14px !important;
     font-weight: 400 !important;
@@ -190,7 +190,7 @@
     color: var(--grey-300) !important;
 }
 
-.kori-login__text-btn {
+.tovik-login__text-btn {
     font-family: 'Encode Sans Expanded' !important;
     font-size: 14px !important;
     font-weight: 400 !important;
