Kori to Tovik, cont.

--- a/Sparc2/Sparc2/Html.razor
+++ b/Sparc2/Sparc2/Html.razor
@@ -37,6 +37,6 @@
         });
 
     </script>
-    <script type="module" src="https://localhost:7185/kori-translate.js"></script>
+    <script type="module" src="https://localhost:7185/tovik.js"></script>
 </body>
 </html>
