--- a/Sparc2/Sparc2/Profile/UserProfile.razor
+++ b/Sparc2/Sparc2/Profile/UserProfile.razor
@@ -42,7 +42,7 @@
             break;
         case "Language":
             <Modal Title="Select Language" CssClass="language-modal" OnClose="OnCancel" ShowDefaultButtons="true" ShowSaveButton="false">
-                <kori-langselect></kori-langselect>
+                <tovik-language></tovik-language>
             </Modal>
             break;
         case "Avatar":
