--- a/Sparc2/Sparc2/Profile/UserProfile.razor.scss
+++ b/Sparc2/Sparc2/Profile/UserProfile.razor.scss
@@ -103,7 +103,7 @@
     background: linear-gradient(135deg, #f093fb, #f5576c);
 }
 
-kori-langselect ::deep select {
+tovik-language ::deep select {
     appearance: none;
     background-color: #f9f9f9;
     color: #333;
