--- a/Sparc2/Sparc2/Profile/Avatar/EmojiSelector.razor
+++ b/Sparc2/Sparc2/Profile/Avatar/EmojiSelector.razor
@@ -29,7 +29,7 @@
 
     protected override void OnInitialized()
     {
-        Emojis = UserAvatar.Emojis();
+        Emojis = BlossomAvatar.Emojis();
     }
 
     async Task SetEmoji(string emoji)
