--- a/Sparc2/Sparc2/Profile/Avatar/EditAvatar.razor
+++ b/Sparc2/Sparc2/Profile/Avatar/EditAvatar.razor
@@ -44,7 +44,7 @@
     </div>
 
 @code {
-    [Parameter] public UserAvatar User { get; set; } = null!;
+    [Parameter] public BlossomAvatar User { get; set; } = null!;
     [Parameter] public bool SpillBackground { get; set; }
     [Parameter] public EventCallback<string> OnEmojiChanged { get; set; }
     public int descLimit = 275;
