Update profile files

--- a/Sparc2/Sparc2/Profile/EditEmail.razor
+++ b/Sparc2/Sparc2/Profile/EditEmail.razor
@@ -1,9 +1,9 @@
 ﻿<div>
     <InputText @bind-Value="Email" @oninput="OnEmailChanged" />
-    <label>
+    @* <label>
         <InputCheckbox Value="VerifyEmail" ValueChanged="OnVerifyEmailChanged" ValueExpression="@(() => VerifyEmail)" />
         <span>Verify this email</span>
-    </label>
+    </label> *@
 </div>
 
 @code {
