--- a/Sparc2/Sparc2/Shared/NavMenu.razor.scss
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor.scss
@@ -34,7 +34,7 @@
         .account-btn {
             display: flex;
             align-items: center;
-            gap: 8px;
+            /*gap: 8px;*/
 
             ::deep svg path {
                 stroke: var(--purple-800);
