--- a/Sparc2/Sparc2/Catalog/ProductPurchase.razor
+++ b/Sparc2/Sparc2/Catalog/ProductPurchase.razor
@@ -1,68 +1,131 @@
-﻿<div class="product-purchase">
-    <form>
-        <section>
+﻿@using Sparc.Blossom.Authentication
+@using Sparc.Blossom.Billing
+<div class="product-purchase">
+    <form @onsubmit="SubmitUserBilling" @onsubmit:preventDefault="true">
+        <section class="license-section">
             <h5>Select License</h5>
-            <div class="form-container">
-                <label>
-                    <input type="radio" name="license-input" />
-                    <span>For yourself</span>
-                </label>
-                <label>
-                    <input type="radio" name="license-input" />
-                    <span>Gift</span>
-                </label>
-            </div>
+                <div class="form-container">
+                    <label>
+                        <input type="radio" name="license-input" />
+                        <span>For yourself</span>
+                    </label>
+                    <label>
+                        <input type="radio" name="license-input" />
+                        <span>Gift</span>
+                    </label>
+                </div>
         </section>
-        <section>
+        <section class="billing-section">
             <h5>Billing Information</h5>
             <div class="form-container">
                 <div class="form-group">
                     <label>
                         <span>First Name *</span>
-                        <input type="text" placeholder="First Name" required/>
+                        <input @bind="CurrentUserBilling.FirstName" placeholder="First Name" />
                     </label>
                     <label>
                         <span>Last Name *</span>
-                        <input type="text" placeholder="Last Name" />
+                        <input @bind="CurrentUserBilling.LastName" placeholder="Last Name" />
                     </label>
                 </div>
                 <label>
                     <span>Address *</span>
-                    <input type="text" placeholder="Address" required />
+                    <input @bind="CurrentUserBilling.Address" placeholder="Address" />
                 </label>
                 <label>
                     <span>Address 2</span>
-                    <input type="text" placeholder="Additional Address" />
+                    <input @bind="CurrentUserBilling.Address2" placeholder="Additional Address" />
                 </label>
                 <div class="form-group">
                     <label>
                         <span>City *</span>
-                        <input type="text" placeholder="City" required />
+                        <input @bind="CurrentUserBilling.City" placeholder="City" />
                     </label>
                     <label>
                         <span>State/Province *</span>
-                        <input type="text" placeholder="State/Province" required />
+                        <input @bind="CurrentUserBilling.State" placeholder="State/Province" />
                     </label>
                 </div>
                 <div class="form-group">
                     <label>
                         <span>Country *</span>
-                        <input type="text" placeholder="Country" required />
+                        <input @bind="CurrentUserBilling.Country" placeholder="Country" />
                     </label>
                     <label>
                         <span>ZIP *</span>
-                        <input type="text" placeholder="ZIP Code" required />
+                        <input @bind="CurrentUserBilling.Zip" placeholder="ZIP Code" />
                     </label>
                 </div>
                 <label>
                     <span>Phone number (optional)</span>
-                    <input type="tel" placeholder="Phone Number" />
+                    <input @bind="CurrentUserBilling.Phone"placeholder="Phone Number" />
                 </label>
             </div>
         </section>
+        <section class="payment-section">
+            <h5>Payment Information</h5>
+            <div class="form-container">
+                <div class="form-group">
+                    <label>
+                        <span>Discount Code</span>
+                        <input @bind="CurrentUserBilling.FirstName" placeholder="First Name" />
+                    </label>
+                </div>
+                <label>
+                    <span>Address *</span>
+                    <input @bind="CurrentUserBilling.Address" placeholder="Address" />
+                </label>
+                <label>
+                    <span>Address 2</span>
+                    <input @bind="CurrentUserBilling.Address2" placeholder="Additional Address" />
+                </label>
+                <div class="form-group">
+                    <label>
+                        <span>Country *</span>
+                        <input @bind="CurrentUserBilling.Country" placeholder="Country" />
+                    </label>
+                    <label>
+                        <span>ZIP *</span>
+                        <input @bind="CurrentUserBilling.Zip" placeholder="ZIP Code" />
+                    </label>
+                </div>
+                <label>
+                    <span>Phone number (optional)</span>
+                    <input @bind="CurrentUserBilling.Phone" placeholder="Phone Number" />
+                </label>
+            </div>
+        </section>
+        <section class="summary-section">
+
+        </section>
+        <button type="submit" class="btn btn-primary">
+            Purchase
+        </button>
     </form>
 </div>
 
 @code {
     [Parameter] public Product? ActiveProduct { get; set; }
+
+    BlossomUser? CurrentUser;
+    UserBilling CurrentUserBilling = new UserBilling();
+
+    protected override async Task OnInitializedAsync()
+    {
+        CurrentUser = await SparcEngine.UserInfo();
+        var stripeProduct = await SparcEngine.GetProductAsync("prod_SW5yY8O8KprzFu");
+        var test = ActiveProduct;
+
+        var bpoint = "";
+    }
+
+    public Task<string> SubmitUserBilling()
+    {
+        if (CurrentUser == null)
+        {
+            throw new InvalidOperationException("User is not authenticated.");
+        }
+
+        return Task.FromResult("Billing information submitted successfully.");
+    }
 }
