--- a/Sparc2/Sparc2/Catalog/ProductPurchase.razor.css
+++ b/Sparc2/Sparc2/Catalog/ProductPurchase.razor.css
@@ -56,7 +56,7 @@
   line-height: 140%; /* 16.8px */
   letter-spacing: -0.12px;
 }
-.product-purchase form section:nth-child(2) label input[type=text], .product-purchase form section:nth-child(2) label input[type=email], .product-purchase form section:nth-child(2) label input[type=tel], .product-purchase form section:nth-child(2) label input[type=password] {
+.product-purchase form section:nth-child(2) label input {
   display: flex;
   padding: 16px;
   flex-direction: column;
